[FIX] #177 무드보드 랜덤 반환 (#179)
* fix: #177

* fix: #177

* fix: #177