@@ -7,7 +7,9 @@ import or.sopt.houme.domain.taste.repository.taste.TasteRepository;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,14 +18,16 @@ public class TasteServiceImpl implements TasteService {
     private final TasteRepository tasteRepository;
 
     // 무드보드 제공 (cursor 기반 페이지네이션)
-    @Cacheable(value = "moodBoardListCache", key = "'cursor:' + #cursorId + ':size:' + #size")
     @Override
     public MoodBoardListResponse getMoodboard(Long cursorId, int size) {
 
-        List<MoodBoardResponse> list = tasteRepository.findTasteByCursor(cursorId, size)
+        List<MoodBoardResponse> list = tasteRepository.findAll()
                 .stream()
                 .map(MoodBoardResponse::from)
-                .toList();
+                .collect(Collectors.toList());
+
+        // 리스트 섞기
+        Collections.shuffle(list);
 
         return MoodBoardListResponse.of(list);
     }
